css/index.css
@import url("https://fonts.googleapis.com/css2?family=Assistant:wght@400;600;800&display=swap");

:root {
  font-family: "Assistant", sans-serif;
  line-height: 1.5;
  --main-color: black;
  --accent-color: white;
  --paragraph-color: rgb(145, 150, 154);
  --nav-hover-color: rgba(28, 127, 212);
  --end-nav-hover-color: rgba(13, 199, 222);
  --about-us-background-color: white;
  --line-color: rgb(26, 75, 167);
  --partners-back-color: rgb(232, 236, 239);
  --product-icon-back: linear-gradient(0deg, #1d7ad1 0%, #0fc9df 100%);
  --footer-back-color: rgb(34, 44, 53);
  --contacts-form-background: rgba(35, 44, 53, 0.85);
}

* {
  padding: 0;
  margin: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
}

/* Container */
.container {
  max-width: 980px;
  margin: auto;
}

/* Buttons */
.btn-main {
  display: inline-block;
  font-size: 14px;
  vertical-align: top;
  padding: 10px 30px;
  color: var(--accent-color);
  background-image: linear-gradient(#7eb8e4, #4ea0e4 50%, #1d82d4);
  text-align: center;
  text-decoration: none;
  transition: color 0.7s;
  margin: 10px;
}

.btn-main:hover {
  color: var(--accent-color);
  background-image: linear-gradient(#1d82d4, #4ea0e4 50%, #7eb8e4);
}

.btn-accent {
  display: inline-block;
  font-size: 14px;
  vertical-align: top;
  padding: 10px 30px;
  color: var(--accent-color);
  background-image: linear-gradient(#1d82d4, #4ea0e4 50%, #7eb8e4);
  text-align: center;
  text-decoration: none;
  transition: color 0.7s;
  margin: 10px;
}

.btn-accent:hover {
  color: var(--accent-color);
  background-image: linear-gradient(#7eb8e4, #4ea0e4 50%, #1d82d4);
}

/* Header */
.header {
  background-image: url(../img/background-banner.svg);
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  min-height: 100vh;
}

.header-logo {
  margin: 10px;
}

.header-inner {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0;
}

/* Nav */
.nav .nav-link {
  display: inline-block;
  font-size: 16px;
  font-weight: 600;
  color: var(--main-color);
  vertical-align: top;
  margin: 0 20px;
  text-decoration: none;
  transition: color 0.2s linear;
}

.nav-link:hover {
  color: var(--nav-hover-color);
}

.social-media-links {
  margin: 0 3px;
  text-decoration: none;
}

/* Burger menu */
.burger-menu {
  display: none;
}

#menu-toggle {
  display: none;
}

.menu-box {
  background-color: var(--accent-color);
  background-attachment: fixed;
  width: 100vw;
  height: 100vh;
  list-style: none;
  visibility: hidden;
  position: absolute;
}

.menu-item {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 12px 24px;
  font-size: 16px;
  font-weight: 600;
  color: var(--main-color);
  margin: 0 20px;
  text-decoration: none;
  transition: color 0.2s linear;
  text-decoration: none;
}

.menu-item:hover {
  color: var(--nav-hover-color);
}

.menu-btn {
  display: block;
  width: 40px;
  height: 40px;
  background-color: var(--accent-color);
  position: relative;
}

.menu-btn span,
.menu-btn span:before,
.menu-btn span:after {
  display: block;
  width: 30px;
  height: 3px;
  background: var(--main-color);
  position: absolute;
  top: 50%;
  left: 50%;
  margin-left: -15px;
  margin-top: -1.5px;
}

.menu-btn span::before,
.menu-btn span::after {
  content: "";
}

.menu-btn span:before {
  transform: translateY(-10px);
}

.menu-btn span:after {
  transform: translateY(10px);
}

#menu-toggle:checked ~ .menu-btn > span {
  transform: rotate(45deg);
}
#menu-toggle:checked ~ .menu-btn > span::before {
  top: 0;
  transform: rotate(0);
}
#menu-toggle:checked ~ .menu-btn > span::after {
  top: 0;
  transform: rotate(90deg);
}
#menu-toggle:checked ~ .menu-box {
  visibility: visible;
  left: 0;
}

.menu-btn > span,
.menu-btn > span::before,
.menu-btn > span::after {
  transition-duration: 0.25s;
}

@media (max-width: 767px) {
  .burger-menu {
    display: block;
  }

  .header-inner nav {
    display: none;
  }
}

/* Banner */
.banner {
  margin: 180px 0px 0px 0px;
  animation-duration: 2s;
  animation-name: slidein;
}

@keyframes slidein {
  from {
    margin-top: -2%;
  }

  to {
    height: 100%;
  }
}

@media (min-width: 600px) {
  .banner {
    display: grid;
    grid-template-columns: 1fr 1fr;
    place-items: center;
  }
}

.banner-image {
  padding-bottom: 30px;
}

.banner-image img {
  width: 100%;
  height: auto;
}

.banner-text {
  display: flex;
  flex: 1;
  align-items: center;
  justify-content: center;
  text-align: center;
  flex-direction: column;
  margin-bottom: 150px;
}

.banner-title {
  color: var(--main-color);
  font-size: 85px;
  font-weight: 700;
  line-height: 1;
}

.banner-paragraph {
  margin: 20px 50px 50px 50px;
  color: var(--paragraph-color);
  font-size: 18px;
}

.banner-btn {
  padding-bottom: 25px;
}

/* Main */

/* About Us */
.about-us-background {
  background-image: url(../img/background-about-us.svg);
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  width: 100%;
  min-height: 600px;
  padding-bottom: 30px;
}

.about-us {
  padding-top: 100px;
  padding-bottom: 100px;
}

.about-us-buttons {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

@media (min-width: 600px) {
  .about-us {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 25px;
  }
}

.about-us-image {
  position: relative;
}

.about-us-image img {
  width: 100%;
  height: auto;
}

.about-us-text {
  background-color: var(--about-us-background-color);
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-left: 15px;
  padding-right: 15px;
  line-height: 1.6;
}

.about-us-text h2 {
  font-size: 50px;
  padding-bottom: 15px;
}

.about-us-text span:after {
  content: "";
  display: block;
  width: 50px;
  height: 3px;
  background-color: var(--line-color);
}

.about-us-text h3 {
  font-weight: 600;
  font-size: 22px;
  opacity: 0.8;
  padding-top: 15px;
}
/* ... */

